--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -22,10 +22,10 @@
    <widget class="QPlainTextEdit" name="TextCenter">
     <property name="geometry">
      <rect>
-      <x>260</x>
-      <y>160</y>
-      <width>471</width>
-      <height>611</height>
+      <x>420</x>
+      <y>170</y>
+      <width>311</width>
+      <height>561</height>
      </rect>
     </property>
     <property name="font">
@@ -370,7 +370,7 @@ p, li { white-space: pre-wrap; }
      <rect>
       <x>10</x>
       <y>740</y>
-      <width>241</width>
+      <width>271</width>
       <height>31</height>
      </rect>
     </property>
@@ -936,10 +936,10 @@ p, li { white-space: pre-wrap; }
    <widget class="QLineEdit" name="ClauseName">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>420</x>
       <y>130</y>
-      <width>471</width>
-      <height>25</height>
+      <width>311</width>
+      <height>31</height>
      </rect>
     </property>
     <property name="font">
@@ -962,9 +962,17 @@ p, li { white-space: pre-wrap; }
      <rect>
       <x>10</x>
       <y>130</y>
-      <width>241</width>
+      <width>401</width>
       <height>601</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>11</pointsize>
+     </font>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarAsNeeded</enum>
     </property>
     <property name="headerHidden">
      <bool>true</bool>
