--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -75,26 +75,26 @@
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
-   <widget class="QTextEdit" name="Clause">
+   <widget class="QTextEdit" name="TextRight">
     <property name="geometry">
      <rect>
-      <x>840</x>
+      <x>780</x>
       <y>128</y>
-      <width>351</width>
+      <width>411</width>
       <height>461</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>12</pointsize>
+      <pointsize>10</pointsize>
      </font>
     </property>
     <property name="html">
      <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:12pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot;-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:12pt;&quot;&gt;&lt;br /&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_11">
@@ -218,6 +218,9 @@ p, li { white-space: pre-wrap; }
      </property>
     </widget>
     <widget class="QComboBox" name="Razd">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -356,7 +359,7 @@ p, li { white-space: pre-wrap; }
      <rect>
       <x>10</x>
       <y>740</y>
-      <width>311</width>
+      <width>211</width>
       <height>31</height>
      </rect>
     </property>
@@ -365,9 +368,12 @@ p, li { white-space: pre-wrap; }
     </property>
    </widget>
    <widget class="QPushButton" name="GoRight">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>800</x>
+      <x>740</x>
       <y>200</y>
       <width>31</width>
       <height>91</height>
@@ -378,9 +384,12 @@ p, li { white-space: pre-wrap; }
     </property>
    </widget>
    <widget class="QPushButton" name="GoLeft">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
-      <x>800</x>
+      <x>740</x>
       <y>330</y>
       <width>31</width>
       <height>91</height>
@@ -432,7 +441,7 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="NewClause">
     <property name="geometry">
      <rect>
-      <x>740</x>
+      <x>640</x>
       <y>130</y>
       <width>91</width>
       <height>31</height>
@@ -445,7 +454,7 @@ p, li { white-space: pre-wrap; }
    <widget class="QPushButton" name="DeleteClause">
     <property name="geometry">
      <rect>
-      <x>640</x>
+      <x>540</x>
       <y>130</y>
       <width>91</width>
       <height>31</height>
@@ -458,9 +467,9 @@ p, li { white-space: pre-wrap; }
    <widget class="QGroupBox" name="groupBox_3">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>250</x>
       <y>40</y>
-      <width>571</width>
+      <width>581</width>
       <height>81</height>
      </rect>
     </property>
@@ -585,7 +594,7 @@ p, li { white-space: pre-wrap; }
     <widget class="QPushButton" name="Effekt_po_razd">
      <property name="geometry">
       <rect>
-       <x>461</x>
+       <x>470</x>
        <y>10</y>
        <width>101</width>
        <height>61</height>
@@ -922,7 +931,7 @@ p, li { white-space: pre-wrap; }
    <widget class="QLineEdit" name="ClauseName">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>230</x>
       <y>130</y>
       <width>301</width>
       <height>31</height>
@@ -934,7 +943,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>20</string>
+     <string/>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -948,7 +957,7 @@ p, li { white-space: pre-wrap; }
      <rect>
       <x>10</x>
       <y>130</y>
-      <width>311</width>
+      <width>211</width>
       <height>601</height>
      </rect>
     </property>
@@ -978,9 +987,9 @@ p, li { white-space: pre-wrap; }
    <widget class="QTextEdit" name="TextCenter">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>230</x>
       <y>170</y>
-      <width>461</width>
+      <width>501</width>
       <height>601</height>
      </rect>
     </property>
