--- a/knowledgebase.ui
+++ b/knowledgebase.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>960</width>
-    <height>578</height>
+    <width>1150</width>
+    <height>603</height>
    </rect>
   </property>
   <property name="font">
@@ -18,23 +18,10 @@
   <property name="windowTitle">
    <string>База знаний</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_11">
-   <item>
-    <layout class="QGridLayout" name="gridLayout_2">
-     <item row="0" column="2">
-      <widget class="QPushButton" name="pushButton">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>41</height>
-        </size>
-       </property>
-       <property name="text">
-        <string>Разблокировать</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
+  <layout class="QGridLayout" name="gridLayout_3">
+   <item row="0" column="0">
+    <layout class="QHBoxLayout" name="horizontalLayout_4">
+     <item>
       <widget class="QGroupBox" name="groupBox">
        <property name="font">
         <font>
@@ -57,63 +44,21 @@
              </widget>
             </item>
             <item>
-             <widget class="QComboBox" name="comboBox">
+             <widget class="QComboBox" name="razdel"/>
+            </item>
+            <item>
+             <layout class="QVBoxLayout" name="verticalLayout_3">
               <item>
-               <property name="text">
-                <string>ПСП | Социальное партнерство</string>
-               </property>
+               <widget class="QLabel" name="label_3">
+                <property name="text">
+                 <string>Акт:</string>
+                </property>
+               </widget>
               </item>
               <item>
-               <property name="text">
-                <string>ДОГ | Трудовой договор, занятость</string>
-               </property>
+               <widget class="QComboBox" name="akt"/>
               </item>
-              <item>
-               <property name="text">
-                <string>РВ | Рабочее время</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>ВО | Время отдыха</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>ГДП | Гарантии профкома</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>ЗП | Заработная плата</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>ОТ | Охрана труда</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>ТСП | Трудовые споры</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>СЦ | Социально-бытовое обслуживание</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>ТОК | Труд отдельных категорий работников</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>ПР | Произв. экон. вопросы</string>
-               </property>
-              </item>
-             </widget>
+             </layout>
             </item>
            </layout>
           </item>
@@ -127,56 +72,21 @@
              </widget>
             </item>
             <item>
-             <widget class="QComboBox" name="comboBox_2"/>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <layout class="QVBoxLayout" name="verticalLayout_3">
-            <item>
-             <widget class="QLabel" name="label_3">
-              <property name="text">
-               <string>Акт:</string>
-              </property>
-             </widget>
+             <widget class="QComboBox" name="question"/>
             </item>
             <item>
-             <widget class="QComboBox" name="comboBox_3">
+             <layout class="QVBoxLayout" name="verticalLayout_4">
               <item>
-               <property name="text">
-                <string>КЗОТ | Решение общетрудовых вопросов</string>
-               </property>
+               <widget class="QLabel" name="label_4">
+                <property name="text">
+                 <string>Качество:</string>
+                </property>
+               </widget>
               </item>
               <item>
-               <property name="text">
-                <string>ОБР | Решение отраслевых вопросов (образования)</string>
-               </property>
+               <widget class="QComboBox" name="quality"/>
               </item>
-              <item>
-               <property name="text">
-                <string>ОТС | Решение по вопросам Отраслевого соглашения</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>ТРОТС | решение по вопросам Территориального соглашения</string>
-               </property>
-              </item>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <layout class="QVBoxLayout" name="verticalLayout_4">
-            <item>
-             <widget class="QLabel" name="label_4">
-              <property name="text">
-               <string>Возможности:</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QComboBox" name="comboBox_4"/>
+             </layout>
             </item>
            </layout>
           </item>
@@ -185,66 +95,97 @@
        </layout>
       </widget>
      </item>
-     <item row="0" column="1">
-      <spacer name="horizontalSpacer_3">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
+     <item>
+      <widget class="QPushButton" name="pushButton">
+       <property name="minimumSize">
         <size>
-         <width>40</width>
-         <height>20</height>
+         <width>0</width>
+         <height>51</height>
         </size>
        </property>
-      </spacer>
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Разблокировать</string>
+       </property>
+      </widget>
      </item>
-    </layout>
-   </item>
-   <item>
-    <layout class="QHBoxLayout" name="horizontalLayout_7">
      <item>
       <widget class="QGroupBox" name="groupBox_2">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>147</height>
+        </size>
+       </property>
        <property name="title">
         <string>Фрагменты:</string>
        </property>
-       <layout class="QVBoxLayout" name="verticalLayout_10">
-        <item>
-         <layout class="QVBoxLayout" name="verticalLayout_5">
-          <item>
-           <widget class="QRadioButton" name="radioButton">
-            <property name="text">
-             <string>Законы</string>
-            </property>
-            <property name="checked">
-             <bool>true</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="radioButton_2">
-            <property name="text">
-             <string>Типовые фрагменты КД</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="radioButton_3">
-            <property name="text">
-             <string>Все фрагменты КД</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
+       <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="0">
+         <widget class="QRadioButton" name="radioButton">
+          <property name="font">
+           <font>
+            <pointsize>12</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Законы</string>
+          </property>
+          <property name="checked">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QRadioButton" name="radioButton_2">
+          <property name="font">
+           <font>
+            <pointsize>12</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Типовые фрагменты КД</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QRadioButton" name="radioButton_3">
+          <property name="font">
+           <font>
+            <pointsize>12</pointsize>
+           </font>
+          </property>
+          <property name="text">
+           <string>Все фрагменты КД</string>
+          </property>
+         </widget>
         </item>
        </layout>
       </widget>
      </item>
      <item>
-      <layout class="QVBoxLayout" name="verticalLayout_9">
+      <layout class="QVBoxLayout" name="verticalLayout_5">
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_4">
+        <widget class="QPushButton" name="pushButton_2">
+         <property name="minimumSize">
+          <size>
+           <width>0</width>
+           <height>41</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>?Показать?</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_3">
          <item>
-          <spacer name="horizontalSpacer">
+          <spacer name="horizontalSpacer_2">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
@@ -264,76 +205,7 @@
           </widget>
          </item>
          <item>
-          <spacer name="horizontalSpacer_2">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_3">
-         <item>
-          <spacer name="horizontalSpacer_6">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pushButton_2">
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>41</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>Показать</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pushButton_3">
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>41</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>Вставить в КД</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="pushButton_4">
-           <property name="minimumSize">
-            <size>
-             <width>0</width>
-             <height>41</height>
-            </size>
-           </property>
-           <property name="text">
-            <string>Внести в файл</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <spacer name="horizontalSpacer_7">
+          <spacer name="horizontalSpacer">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
@@ -351,7 +223,7 @@
      </item>
     </layout>
    </item>
-   <item>
+   <item row="1" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout_8">
@@ -397,10 +269,10 @@
      </item>
     </layout>
    </item>
-   <item>
+   <item row="2" column="0">
     <widget class="QTextEdit" name="textEdit"/>
    </item>
-   <item>
+   <item row="3" column="0">
     <layout class="QHBoxLayout" name="horizontalLayout_6">
      <item>
       <spacer name="horizontalSpacer_4">
@@ -424,7 +296,7 @@
         </size>
        </property>
        <property name="text">
-        <string>&lt;&lt;Предыдущий</string>
+        <string>&lt;&lt; Предыдущий</string>
        </property>
       </widget>
      </item>
@@ -437,7 +309,7 @@
         </size>
        </property>
        <property name="text">
-        <string>Следующий&gt;&gt;</string>
+        <string>Следующий &gt;&gt;</string>
        </property>
       </widget>
      </item>
@@ -455,7 +327,7 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_7">
+      <widget class="QPushButton" name="pushButton_4">
        <property name="minimumSize">
         <size>
          <width>0</width>
@@ -463,7 +335,20 @@
         </size>
        </property>
        <property name="text">
-        <string>Выход</string>
+        <string>Внести в файл</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_3">
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>41</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>Вставить в КД</string>
        </property>
       </widget>
      </item>
